--- a/docker-compose.model-registry.yaml
+++ b/docker-compose.model-registry.yaml
@@ -1,6 +1,6 @@
 services:
   db:
-    restart: always
+    # restart: always
     image: postgres
     container_name: mlflow_db
     expose:
@@ -30,7 +30,7 @@ services:
       - confluent
 
   tracking_server:
-    restart: always
+    # restart: always
     build:
       context: model_registry
       dockerfile: Dockerfile
