--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -6,3 +6,8 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['inference-api:8000']
+
+  - job_name: 'node-exporter'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['localhost:9100']  # Thay 'localhost' bằng IP hoặc hostname của Node Exporter
