add node exporter

--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -10,4 +10,4 @@ scrape_configs:
   - job_name: 'node-exporter'
     scrape_interval: 15s
     static_configs:
-      - targets: ['localhost:9100']  # Thay 'localhost' bằng IP hoặc hostname của Node Exporter
+      - targets: ['10.200.2.51:9100']  # Thay 'localhost' bằng IP hoặc hostname của Node Exporter
